# Compiler-Project

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  grammar.txt  lexler.c  lexler.h  regexparse.c  regexparse.h  source.ss  test_program.tc
graphs/: nfa_graph.gv  tree_graph.gv
include/: DFA_builder.h  NFA_builder.h  compiler_errors.h  interpreter.h  lexer.h  nfa_builder.h  parser.h  regexparse.h  vector.h
src/: CMakeLists.txt  DFA_builder.c  NFA_builder.c  interpreter.c  lexer.c  main.c  nfa_builder.c  parser.c  regexparse.c  vector.c
tests/: CMakeLists.txt  build_collection.c  main.c  test1.c  test2.c  test3.c  test4.c
